--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ version = mod_version
 group = mod_group_id
 
 repositories {
+    maven {
+        name "createmod maven"
+        url "https://maven.createmod.net/"
+    }
     // Add here additional repositories if required by some of the dependencies below.
 }
 
@@ -112,6 +116,10 @@ dependencies {
     // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
 
     implementation "de.javagl:jgltf-model:2.0.4"
+
+    compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
+    runtimeOnly "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
+
 
     // Example project dependency using a sister or child project:
     // implementation project(":myproject")
