--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,14 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 }
 
+runs {
+    configureEach {
+        dependencies {
+            runtime "de.javagl:jgltf-model:2.0.4"
+        }
+    }
+}
+
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
 // When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
