--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,9 @@ dependencies {
     implementation "de.javagl:jgltf-model:2.0.4"
 
     compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
-    runtimeOnly "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
+    implementation "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
+
+    implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
 
 
     // Example project dependency using a sister or child project:
