--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,12 @@ configurations {
     runtimeClasspath.extendsFrom localRuntime
 }
 
+minecraft {
+    accessTransformers {
+        file 'src/main/resources/META-INF/accesstransformer.cfg'
+    }
+}
+
 dependencies {
     // Specify the version of Minecraft to use.
     // Depending on the plugin applied there are several options. We will assume you applied the userdev plugin as shown above.
