--- a/build.gradle
+++ b/build.gradle
@@ -125,10 +125,10 @@ dependencies {
 
     compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
     jarJar(implementation "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
-    jarJar(implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2')
-    jarJar(implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0')
+    jarJar(implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1')
+    jarJar(implementation 'com.fasterxml.jackson.core:jackson-core:2.20.1')
     jarJar(implementation 'de.javagl:jgltf-impl-v2:2.0.4')
-    jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:3.0-rc5')
+    jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20')
     implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
 
 
