--- a/build.gradle
+++ b/build.gradle
@@ -129,7 +129,7 @@ dependencies {
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-core:2.20.1')
     jarJar(implementation 'de.javagl:jgltf-impl-v2:2.0.4')
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20')
-    implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
+    //implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
 
 
     // Example project dependency using a sister or child project:
