--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,19 @@ repositories {
     }
     maven { url 'https://jitpack.io' }
     // Add here additional repositories if required by some of the dependencies below.
+    maven {
+        name = "BlameJared"
+        url = "https://maven.blamejared.com"
+    }
+    // Architectury API, REI
+    maven { url = "https://maven.architectury.dev/" }
+    maven { url 'https://maven.wispforest.io' }
+    maven { url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
+    // Forgified Fabric API
+    maven { url = "https://maven.su5ed.dev/releases" }
+    maven { url = "https://modmaven.dev" }
+    maven { url = "https://maven.teamresourceful.com/repository/maven-public/" }
+    maven { url = "https://beta.cursemaven.com" }
 }
 
 base {
@@ -136,6 +149,8 @@ dependencies {
     jarJar(implementation 'de.javagl:jgltf-impl-v2:2.0.4')
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20')
     implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
+    implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
+    implementation("io.wispforest:owo-lib-neoforge:0.12.15.1-beta.6+1.21")
 
 
     // Example project dependency using a sister or child project:
