--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
     maven { url = "https://modmaven.dev" }
     maven { url = "https://maven.teamresourceful.com/repository/maven-public/" }
     maven { url = "https://beta.cursemaven.com" }
+    maven { url "https://api.modrinth.com/maven" }
 }
 
 base {
@@ -148,9 +149,10 @@ dependencies {
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-core:2.20.1')
     jarJar(implementation 'de.javagl:jgltf-impl-v2:2.0.4')
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20')
-    implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38"
+    jarJar(implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38")
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
     implementation("io.wispforest:owo-lib-neoforge:0.12.15.1-beta.6+1.21")
+    implementation("maven.modrinth:immediatelyfast:1.6.9+1.21.1-neoforge") // Get latest version from modrinth
 
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
 
@@ -158,9 +160,9 @@ dependencies {
         setTransitive(false)
     }
     runtimeOnly "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
-    implementation("curse.maven:Sodium-394468:6382651") {
-        setTransitive(false)
-    }
+//    implementation("curse.maven:Sodium-394468:6382651") {
+//        setTransitive(false)
+//    }
 
     // Example project dependency using a sister or child project:
     // implementation project(":myproject")
