--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     implementation("maven.modrinth:immediatelyfast:1.6.9+1.21.1-neoforge") // Get latest version from modrinth
     implementation("maven.modrinth:iris:1.8.12+1.21.1-neoforge") // Get latest version from modrinth
     implementation("maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge") // Get latest version from modrinth
+    implementation("maven.modrinth:colorwheel:1.2.0+mc1.21.1-neoforge") // Get latest version from modrinth
 
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
 
