--- a/build.gradle
+++ b/build.gradle
@@ -139,9 +139,10 @@ dependencies {
 
     // Example mod dependency using a file as dependency
     // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
-
-    jarJar(implementation("de.javagl:jgltf-model:2.0.4"))
-    jarJar(implementation 'com.github.coralblocks:CoralPool:1.4.1')
+    implementation files("libs/krender-model-gltf-neoforge-0.1.3+1.21.1.jar")
+    implementation files("libs/krender-model-guard-neoforge-0.1.3+1.21.1.jar")
+    implementation files("libs/krender-engine-api-neoforge-0.1.3+1.21.1.jar")
+    implementation files("libs/krender-model-loading-neoforge-0.1.3+1.21.1.jar")
 
     compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
     jarJar(implementation "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
