--- a/build.gradle
+++ b/build.gradle
@@ -152,10 +152,10 @@ dependencies {
     jarJar(implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38")
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
     implementation("io.wispforest:owo-lib-neoforge:0.12.15.1-beta.6+1.21")
-    implementation("maven.modrinth:immediatelyfast:1.6.9+1.21.1-neoforge") // Get latest version from modrinth
-    implementation("maven.modrinth:iris:1.8.12+1.21.1-neoforge") // Get latest version from modrinth
-    implementation("maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge") // Get latest version from modrinth
-    implementation("maven.modrinth:colorwheel:1.2.0+mc1.21.1-neoforge") // Get latest version from modrinth
+    compileOnly("maven.modrinth:immediatelyfast:1.6.9+1.21.1-neoforge") // Get latest version from modrinth
+    compileOnly("maven.modrinth:iris:1.8.12+1.21.1-neoforge") // Get latest version from modrinth
+    compileOnly("maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge") // Get latest version from modrinth
+    compileOnly("maven.modrinth:colorwheel:1.2.0+mc1.21.1-neoforge") // Get latest version from modrinth
 
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
 
