--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ base {
 }
 
 // Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
-java.toolchain.languageVersion = JavaLanguageVersion.of(21)
+java.toolchain.languageVersion = JavaLanguageVersion.of(25)
 
 //minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
 //minecraft.accessTransformers.entry public net.minecraft.client.Minecraft textureManager # textureManager
@@ -71,6 +71,8 @@ runs {
         systemProperty 'forge.logging.console.level', 'debug'
 
         modSource project.sourceSets.main
+
+        jvmArguments.add("--add-modules=jdk.incubator.vector")
     }
 
     client {
@@ -142,6 +144,7 @@ dependencies {
 
     jarJar(implementation("de.javagl:jgltf-model:2.0.4"))
     jarJar(implementation 'com.github.coralblocks:CoralPool:1.4.1')
+    implementation("org.simdjson:simdjson-java:0.4.0")
 
     compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
     jarJar(implementation "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
