--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ runs {
         systemProperty 'forge.logging.console.level', 'debug'
 
         modSource project.sourceSets.main
+        jvmArguments.add("-XX:+AllowEnhancedClassRedefinition")
     }
 
     client {
