--- a/build.gradle
+++ b/build.gradle
@@ -152,7 +152,12 @@ dependencies {
     jarJar(implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20')
     jarJar(implementation "dev.engine-room.vanillin:vanillin-neoforge-${minecraft_version}:1.1.3-38")
     implementation "rearth.oritech:oritech-neoforge-${minecraft_version}:0.19.7"
-    implementation("io.wispforest:owo-lib-neoforge:0.12.15.1-beta.6+1.21")
+
+    compileOnlyApi "io.wispforest:owo-lib-neoforge:$owo_neo_version"
+    annotationProcessor "io.wispforest:owo-lib-neoforge:$owo_neo_version"
+    //accessTransformers "io.wispforest:owo-lib-neoforge:$owo_neo_version"
+    //interfaceInjectionData "io.wispforest:owo-lib-neoforge:$owo_neo_version"
+
     compileOnly("maven.modrinth:immediatelyfast:1.6.9+1.21.1-neoforge") // Get latest version from modrinth
     compileOnly("maven.modrinth:iris:1.8.12+1.21.1-neoforge") // Get latest version from modrinth
     compileOnly("maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge") // Get latest version from modrinth
