--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ neo_version=21.1.216
 loader_version_range=[1,)
 
 flywheel_version=1.0.6-beta-38
+owo_neo_version = 0.12.15.1-beta.6+1.21
 
 ## Mod Properties
 
